Fixed bug in model on command start, added unit test for this

--- a/tests/dbt_webhook.yml
+++ b/tests/dbt_webhook.yml
@@ -4,10 +4,10 @@ command_start_hook:
   webhook_url: ""
   webhok_method: "POST"
   headers:
-    Authorization: "bearer {dbt_webhook_AUTH_TOKEN}"
+    Authorization: "bearer {DBT_WEBHOOK_AUTH_TOKEN}"
     Content-Type: "application/json"
   env_vars:
-    - "dbt_webhook_AUTH_TOKEN"
+    - "DBT_WEBHOOK_AUTH_TOKEN"
   inject_meta: []
 
 command_end_hook:
@@ -16,10 +16,10 @@ command_end_hook:
   webhook_url: ""
   webhok_method: "POST"
   headers:
-    Authorization: "bearer {dbt_webhook_AUTH_TOKEN}"
+    Authorization: "bearer {DBT_WEBHOOK_AUTH_TOKEN}"
     Content-Type: "application/json"
   env_vars:
-    - "dbt_webhook_AUTH_TOKEN"
+    - "DBT_WEBHOOK_AUTH_TOKEN"
   inject_meta: []
 
 model_start_hook:
@@ -28,10 +28,10 @@ model_start_hook:
   webhook_url: ""
   webhok_method: "POST"
   headers:
-    Authorization: "bearer {dbt_webhook_AUTH_TOKEN}"
+    Authorization: "bearer {DBT_WEBHOOK_AUTH_TOKEN}"
     Content-Type: "application/json"
   env_vars:
-    - "dbt_webhook_AUTH_TOKEN"
+    - "DBT_WEBHOOK_AUTH_TOKEN"
   inject_meta: []
 
 model_end_hook:
@@ -41,10 +41,10 @@ model_end_hook:
   webhook_url: ""
   webhok_method: "POST"
   headers:
-    Authorization: "bearer {dbt_webhook_AUTH_TOKEN}"
+    Authorization: "bearer {DBT_WEBHOOK_AUTH_TOKEN}"
     Content-Type: "application/json"
   env_vars:
-    - "dbt_webhook_AUTH_TOKEN"
+    - "DBT_WEBHOOK_AUTH_TOKEN"
   inject_meta: []
   node_types:
     - "model"
@@ -56,10 +56,10 @@ model_hook_on_command_start:
   webhook_url: ""
   webhok_method: "POST"
   headers:
-    Authorization: "bearer {dbt_webhook_AUTH_TOKEN}"
+    Authorization: "bearer {DBT_WEBHOOK_AUTH_TOKEN}"
     Content-Type: "application/json"
   env_vars:
-    - "dbt_webhook_AUTH_TOKEN"
+    - "DBT_WEBHOOK_AUTH_TOKEN"
   inject_meta: []
   node_types:
     - "model"
