--- a/tests/dbt_webhook_var_not_defined.yml
+++ b/tests/dbt_webhook_var_not_defined.yml
@@ -8,11 +8,11 @@ model_end_hook:
   webhook_url: ""
   webhok_method: "POST"
   headers:
-    Authorization: "bearer {dbt_webhook_AUTH_TOKEN}"
+    Authorization: "bearer {DBT_WEBHOOK_AUTH_TOKEN}"
     Content-Type: "application/json"
     SomeOtherHeader: "{DBT_MISSING_VAR}"
   env_vars:
-    - "dbt_webhook_AUTH_TOKEN"
+    - "DBT_WEBHOOK_AUTH_TOKEN"
   inject_meta: []
   node_types:
     - "model"
