--- a/tests/command_start_inject_meta.yml
+++ b/tests/command_start_inject_meta.yml
@@ -1,12 +1,10 @@
-model_hook_on_command_start:
+command_start_hook:
   command_types:
     - "compile"
   webhook_url: "a/b/c"
   webhok_method: "POST"
   headers:
     Content-Type: "application/json"
-  inject_meta:
-    - "field1"
 
 model_end_hook:
   command_types:
@@ -15,5 +13,3 @@ model_end_hook:
   webhok_method: "PUT"
   headers:
     Content-Type: "application/json"
-  inject_meta:
-    - "field1"
