--- a/tests/model_start_header_env_var.yml
+++ b/tests/model_start_header_env_var.yml
@@ -1,8 +1,10 @@
-model_hook_on_command_start:
+model_start_hook:
   command_types:
     - "compile"
   webhook_url: "a/b/c"
   webhok_method: "POST"
   headers:
+    Authorization: "Bearer {DBT_WEBHOOK_AUTH_TOKEN}"
     Content-Type: "application/json"
-  inject_meta: []
+  env_vars:
+    - "DBT_WEBHOOK_AUTH_TOKEN"
